--- a/public/css/scss/base/_elements.scss
+++ b/public/css/scss/base/_elements.scss
@@ -16,6 +16,9 @@ h6 {
     font-family: $font-fancy;
     color: $white;
     font-weight: 300;
+    -webkit-font-smoothing: antialiased;
+    -webkit-perspective: 0px !important;
+    -webkit-backface-visibility: visible !important;
 }
 
 h1 {
@@ -50,6 +53,9 @@ p {
     letter-spacing: 0.04vw;
     font-size: 1vw;
     margin-bottom: 0.63vw;
+    -webkit-font-smoothing: antialiased;
+    -webkit-perspective: 0px !important;
+    -webkit-backface-visibility: visible !important;
 }
 
 li {
@@ -59,6 +65,9 @@ li {
     letter-spacing: 0.04vw;
     font-size: 2vw;
     margin-bottom: 0.63vw;
+    -webkit-font-smoothing: antialiased;
+    -webkit-perspective: 0px !important;
+    -webkit-backface-visibility: visible !important;
 }
 
 .special {
