--- a/public/css/scss/layout/_subjectPage.scss
+++ b/public/css/scss/layout/_subjectPage.scss
@@ -52,6 +52,10 @@
         width: 6vw;
     }
 
+    svg{
+      fill: yellow;
+    }
+
     .more {
         position: fixed;
         left: 0;
